src/index.css
@import "react-toastify/dist/ReactToastify.css";
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  scrollbar-width: thin;
  scrollbar-color: #2196f3 #bdbdbd;
  padding: 0 !important;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.container {
  margin: 0 auto;
  padding-left: 5px;
  padding-right: 5px;
  max-width: 320px;
}

@media screen and (min-width: 768px) {
  .container {
    padding-left: 10px;
    padding-right: 10px;
    max-width: 768px;
  }
}

@media screen and (min-width: 1280px) {
  .container {
    max-width: 1280px !important;
  }
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

::-webkit-scrollbar {
  width: 12px;
}

::-webkit-scrollbar-track {
  background-color: #bdbdbd;
  border-radius: 5px;
  padding: 5px;
}

::-webkit-scrollbar-thumb {
  background-color: #2196f3;
  border: 3px solid #bdbdbd;
  border-radius: 12px;

  width: 5px;
}

.MuiModal-root .MuiBox-root {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: #ffffff;
  width: min(330px, 100%);
  height: 600px;
  padding: 10px;
  /* overflow: auto; */
}

.MuiModal-root .buttons-container {
  display: flex;
  gap: 30px;
  justify-content: center;
}
.MuiModal-root p {
  margin: 0;
}
.MuiModal-root .text-container {
  margin-top: 10px;
  margin-bottom: 10px;
  height: 37px;
  overflow-y: auto;
}
.MuiModal-root .MuiBox-root .document .loader {
  right: 0;
}

@media screen and (min-width: 768px) {
  .MuiModal-root .MuiBox-root .document .loader {
    right: -400px;
    top: 600px;
  }
}

.MuiModal-root .MuiBox-root .document div {
  width: 290px !important;
  height: 438px !important;
  padding: 10px;
  margin: 0 auto;
}
.react-pdf__Page {
  width: 290px !important;
  height: 438px !important;
  margin: 0 auto;
}
.react-pdf__Page__textContent {
  width: 290px !important;
  height: 438px !important;
  margin: 0 auto;
}

.react-pdf__Page__canvas {
  width: 290px !important;
  height: 438px !important;
  padding: 10px;
  margin: 0 auto;
}

@media screen and (min-width: 768px) {
  .MuiModal-root .MuiBox-root {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #ffffff;
    width: min(768px, 100%);
    height: 95vh;
    padding: 10px;
    aspect-ratio: 1 /1;
    /* overflow: auto; */
  }

  .MuiModal-root .MuiBox-root .document div {
    width: min(57vh, 595px) !important;
    height: min(80vh, 841px) !important;
    padding: 10px;
    margin: 0 auto;
  }
  .react-pdf__Page {
    width: min(57vh, 595px) !important;
    height: min(80vh, 841px) !important;
    margin: 0 auto;
  }
  .react-pdf__Page__textContent {
    width: min(57vh, 595px) !important;
    height: min(80vh, 841px) !important;
    margin: 0 auto;
  }

  .react-pdf__Page__canvas {
    width: min(57vh, 595px) !important;
    height: min(80vh, 841px) !important;
    padding: 10px;
    margin: 0 auto;
  }
}

.nav-link {
  display: block;
  padding: 6px 16px;
  text-decoration: none;
  border-radius: 5px;
  color: #42a5f5;
  font-weight: 700;
  transition: background-color 0.3s linear;
}

